--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@angular/router": "^19.2.0",
     "jwt-decode": "^4.0.0",
     "ngx-captcha": "^13.0.0",
+    "ngx-quill": "^27.0.1",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.17.2",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
