--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "ngx-captcha": "^13.0.0",
     "ngx-quill": "^27.0.1",
