Yönetici başvuru yönetimi özellikleri eklendi (#37, #39)
- Yönetici, başvurulan ilanları listeleyebilir ve başvuru durumunu güncelleyebilir.
- Başvuru belgelerinin kontrolü için gerekli sayfa oluşturuldu.
- Sayfa üzerinden:
  - Dosya adları görüntülenebiliyor.
  - Belgelerin hangi kriterleri karşıladığı gösteriliyor.
  - Dosyalar indirilebiliyor ve sayfa içinde canlı olarak önizlenebiliyor.
- İlgili işlemler için gerekli service ve model dosyaları oluşturuldu.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "ngx-captcha": "^13.0.0",
+    "ngx-doc-viewer": "^15.0.1",
     "ngx-quill": "^27.0.1",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
